--- a/ng-reactive-survey/src/app/survey/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/survey-question-create/survey-question-create.component.html
@@ -4,11 +4,11 @@
 
   <h3>Question name: {{question.name}}</h3>
   <p>Question type: {{question.questionType}}</p>
-  <button (click)='updateQuestionSurveyType(question.id, QUESTION_TYPE.DROPDOWN)'>
+  <button (click)='updateQuestionSurveyType(question, QUESTION_TYPE.DROPDOWN)'>
     Change to dropdown
   </button>
 
-  <button (click)='delete(question.id)'>Delete question!</button>
+  <button (click)='delete(question)'>Delete question!</button>
 
 </div>
 
