--- a/ng-reactive-survey/src/app/survey/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/survey-question-create/survey-question-create.component.html
@@ -1,15 +1,15 @@
-<h1>Test create page</h1>
+<div>
+  <div *ngFor='let question of (questions$ | async)'>
 
-<div *ngFor='let question of (questions$ | async)'>
+    <h3>Question name: {{question.name}}</h3>
+    <p>Question type: {{question.questionType}}</p>
+    <button (click)='updateQuestionSurveyType(question, QUESTION_TYPE.DROPDOWN)'>
+      Change to dropdown
+    </button>
 
-  <h3>Question name: {{question.name}}</h3>
-  <p>Question type: {{question.questionType}}</p>
-  <button (click)='updateQuestionSurveyType(question, QUESTION_TYPE.DROPDOWN)'>
-    Change to dropdown
-  </button>
+    <button (click)='delete(question)'>Delete question!</button>
 
-  <button (click)='delete(question)'>Delete question!</button>
+  </div>
 
+  <button (click)='createSurveyQuestion()'>CREATE new question</button>
 </div>
-
-<button (click)='createSurveyQuestion()'>CREATE new question</button>
