--- a/ng-reactive-survey/src/app/survey/components/survey-create/survey-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-create/survey-create.component.html
@@ -3,25 +3,28 @@
 <form [formGroup]='form'>
 
   <div>
-    <input formControlName='title'
-           (change)='onValueUpdate()'
-           placeholder='Survey Title'
-           type='text'>
-  </div>
-
-  <div>
-    <input formControlName='description'
-           (change)='onValueUpdate()'
-           placeholder='Survey Description'
-           type='text'>
-  </div>
-
-  <div>
-    <label>
-      Can take anonymously ?
-      <input formControlName='canTakeAnonymously'
+    <mat-form-field>
+      <mat-label>Survey Title</mat-label>
+      <input matInput formControlName='title'
              (change)='onValueUpdate()'
-             type='checkbox'>
-    </label>
+             placeholder='Survey Title'
+             type='text'>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field>
+      <mat-label>Survey Description</mat-label>
+      <textarea matInput formControlName='description'
+                (change)='onValueUpdate()'
+                placeholder='Survey Description'></textarea>
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-checkbox formControlName='canTakeAnonymously'
+                  (change)='onValueUpdate()'>
+      Can take anonymously ?
+    </mat-checkbox>
   </div>
 </form>
