--- a/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
@@ -1,33 +1,59 @@
-<div>
-  <div *ngFor='let question of (questions$ | async)'>
-    <div>
+<mat-card class='mt-2' *ngFor='let question of (questions$ | async)'>
+  <div class='d-flex'>
+    <div class='w-75 mr-4'>
       <mat-form-field>
         <mat-label>Question name:</mat-label>
         <input matInput
+               onClick='this.setSelectionRange(0, this.value.length)'
                [value]='question.name'
                placeholder='Question name'
                type='text'>
       </mat-form-field>
     </div>
-    <div>
+    <div class='w-25'>
       <mat-form-field>
         <mat-label>Question type:</mat-label>
-        <mat-select>
+        <mat-select (selectionChange)='updateQuestionSurveyType(question, $event.value)'
+                    [value]='question.questionType'>
           <mat-option *ngFor='let type of questionTypes$ | async' [value]='type'>
-            {{type}}
+            {{type | translate}}
           </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
-    <button mat-stroked-button
-            color='warn'
-            (click)='delete(question)'>Delete question!
-    </button>
   </div>
 
+  <survey-question-options-create
+    [questionType]='question.questionType'></survey-question-options-create>
+
+  <mat-card-footer class='d-flex justify-content-between py-2'>
+    <div></div>
+    <div class='d-flex justify-content-between'>
+      <div class='mr-3'>
+        <a (click)='delete(question)'>
+          <mat-icon matTooltip='Delete'>delete</mat-icon>
+        </a>
+      </div>
+      <div class='mr-3'>
+        <a (click)='duplicate(question)'>
+          <mat-icon matTooltip='Duplicate'>content_copy</mat-icon>
+        </a>
+      </div>
+      <div class='mr-3'>
+        <mat-slide-toggle>
+          Required
+        </mat-slide-toggle>
+      </div>
+    </div>
+
+  </mat-card-footer>
+</mat-card>
+
+<div class='d-flex justify-content-between'>
+  <div></div>
   <button mat-raised-button
           color='primary'
+          class='mt-2'
           (click)='createSurveyQuestion()'>CREATE new question
   </button>
-
 </div>
