--- a/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
@@ -34,13 +34,14 @@
           <mat-icon matTooltip='Delete'>delete</mat-icon>
         </a>
       </div>
-      <div class='mr-3'>
+      <div class='mr-4'>
         <a (click)='duplicate(question)'>
           <mat-icon matTooltip='Duplicate'>content_copy</mat-icon>
         </a>
       </div>
       <div class='mr-3'>
-        <mat-slide-toggle>
+        <mat-slide-toggle color='primary'
+                          labelPosition='before'>
           Required
         </mat-slide-toggle>
       </div>
