position update improvements

--- a/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
@@ -4,6 +4,7 @@
      (cdkDropListDropped)='changePosition($event)'>
   <mat-card *ngFor='let question of questions'
             cdkDrag
+            cdkDragLockAxis='y'
             [cdkDragData]='question'
             class='mt-2'>
     <div class='text-center handle' cdkDragHandle>
