--- a/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
@@ -12,14 +12,16 @@
     </div>
     <div class='d-flex'>
       <div class='w-75 mr-4'>
-        <mat-form-field>
-          <mat-label>Question name:</mat-label>
+        <mat-form-field
+          appearance='fill'>
+          <mat-label>Question:</mat-label>
           <input matInput
+                 class='question-name'
                  [formControlName]='"question_" + question.id'
                  onClick='this.setSelectionRange(0, this.value.length)'
                  [value]='question.name'
                  (change)='updateQuestionSurveyName(question)'
-                 placeholder='Question name'
+                 placeholder='Question'
                  type='text'>
         </mat-form-field>
       </div>
@@ -28,7 +30,12 @@
           <mat-label>Question type:</mat-label>
           <mat-select (selectionChange)='updateQuestionSurveyType(question, $event.value)'
                       [value]='question.questionType'>
+            <mat-select-trigger class='d-flex'>
+              <mat-icon>{{question.questionType | questionTypeIcon}}</mat-icon>
+              <div class='pt-1 pl-3'>{{question.questionType | translate}}</div>
+            </mat-select-trigger>
             <mat-option *ngFor='let type of questionTypes$ | async' [value]='type'>
+              <mat-icon>{{type | questionTypeIcon}}</mat-icon>
               {{type | translate}}
             </mat-option>
           </mat-select>
