question options create component updates

--- a/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-create/survey-question-create.component.html
@@ -44,7 +44,8 @@
     </div>
 
     <survey-question-options-create
-      [questionType]='question.questionType'></survey-question-options-create>
+      [questionType]='question.questionType'
+      [questionOptions]='question.options'></survey-question-options-create>
 
     <mat-card-footer class='d-flex justify-content-between py-2'>
       <div></div>
