--- a/ng-reactive-survey/src/app/survey/components/survey-question-options-create/survey-question-options-create.component.scss
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-options-create/survey-question-options-create.component.scss
@@ -14,3 +14,15 @@ hr.dotted {
   }
 }
 
+mat-icon {
+  user-select: none;
+  color: darkgray;
+}
+
+.remove {
+  cursor: pointer;
+}
+
+.handle:hover {
+  cursor: grabbing;
+}
