--- a/ng-reactive-survey/src/app/survey/components/survey-question-options-create/survey-question-options-create.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-question-options-create/survey-question-options-create.component.html
@@ -1,5 +1,47 @@
-<div *ngIf='hasOptions(questionType) | async; else noOptions'>
-  Has options!
+<div *ngIf='hasOptions(questionType) | async; else noOptions'
+     [formGroup]='form'
+     cdkDropList
+     (cdkDropListDropped)='changeOptionPosition($event)'>
+  <div *ngFor='let option of questionOptions'
+       cdkDrag
+       cdkDragLockAxis='y'
+       [cdkDragData]='option'>
+    <div class='pl-2 d-flex w-50'>
+      <div class='pt-3 mr-1 handle' cdkDragHandle>
+        <mat-icon>drag_indicator</mat-icon>
+      </div>
+      <div class='d-flex mr-3 w-100'>
+        <div [ngSwitch]='questionType' class='mr-2'>
+          <div class='pt-3' *ngSwitchCase='QUESTION_TYPES.DROPDOWN'>
+            <h3>{{option.position}}.</h3>
+          </div>
+          <div class='pt-3' *ngSwitchCase='QUESTION_TYPES.CHECKBOX'>
+            <mat-icon>check_box_outline_blank</mat-icon>
+          </div>
+          <div class='pt-3' *ngSwitchCase='QUESTION_TYPES.MULTIPLE_CHOICE'>
+            <mat-icon>radio_button_unchecked</mat-icon>
+          </div>
+        </div>
+        <mat-form-field>
+          <input matInput
+                 [formControlName]='"option_" + option.id'
+                 onClick='this.setSelectionRange(0, this.value.length)'
+                 [value]='option.label'
+                 (change)='updateQuestionOptionLabel(option)'
+                 type='text'>
+        </mat-form-field>
+      </div>
+      <div class='pt-3'>
+        <a (click)='deleteOption(option)'>
+          <mat-icon class='remove'>clear</mat-icon>
+        </a>
+      </div>
+    </div>
+  </div>
+  <button mat-stroked-button
+          color='primary'
+          (click)='addOption()'>Add new option
+  </button>
 </div>
 <ng-template #noOptions>
   <div [ngSwitch]='questionType'>
