render survey component with reactive forms

--- a/ng-reactive-survey/src/app/survey-renderer/pages/take-survey/take-survey.page.html
+++ b/ng-reactive-survey/src/app/survey-renderer/pages/take-survey/take-survey.page.html
@@ -1,3 +1,2 @@
-<app-survey-renderer *ngIf='surveyStructure$ | async as surveyStructure'
-                     [surveyStructure]='surveyStructure'>
+<app-survey-renderer [surveyStructure$]='surveyStructure$'>
 </app-survey-renderer>
