start survey responses component

--- a/ng-reactive-survey/src/app/take-survey/pages/take-survey/take-survey.page.html
+++ b/ng-reactive-survey/src/app/take-survey/pages/take-survey/take-survey.page.html
@@ -1,2 +1,4 @@
-<app-survey-renderer [surveyStructure$]='surveyStructure$'>
-</app-survey-renderer>
+<div *ngIf='surveyStructure$ | async as surveyStructure'>
+  <app-survey-renderer [surveyStructure]='surveyStructure'>
+  </app-survey-renderer>
+</div>
