survey instances frontend tab

--- a/ng-reactive-survey/src/app/survey/components/survey-responses/survey-responses.component.html
+++ b/ng-reactive-survey/src/app/survey/components/survey-responses/survey-responses.component.html
@@ -1,1 +1,5 @@
-<p>survey-responses works!</p>
+<div *ngIf='surveyInstances$ | async as surveyInstances'>
+  <div *ngIf='!isEmpty(surveyInstances)'>
+    {{surveyInstances | json}}
+  </div>
+</div>
