--- a/ng-reactive-survey/src/app/take-survey/pages/take-survey/take-survey.page.html
+++ b/ng-reactive-survey/src/app/take-survey/pages/take-survey/take-survey.page.html
@@ -1,5 +1,4 @@
 <div *ngIf='surveyStructure$ | async as surveyStructure'>
-  <app-survey-renderer *ngIf='!isEmpty(surveyStructure)'
-                       [surveyStructure]='surveyStructure'>
+  <app-survey-renderer [surveyStructure]='surveyStructure'>
   </app-survey-renderer>
 </div>
