--- a/ng-reactive-survey/src/app/survey/pages/survey-edit/survey-edit.page.html
+++ b/ng-reactive-survey/src/app/survey/pages/survey-edit/survey-edit.page.html
@@ -1,5 +1,5 @@
 <h1>Survey Edit page !</h1>
-<mat-tab-group>
+<mat-tab-group animationDuration="0ms">
   <mat-tab label='Questions'>
     <ng-template matTabContent>
       <app-survey-create></app-survey-create>
