--- a/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
+++ b/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
@@ -88,7 +88,7 @@
   </form>
 </div>
 
-<div class='d-flex justify-content-between'>
+<div *ngIf='!disable' class='d-flex justify-content-between'>
   <div></div>
   <button mat-raised-button
           color='primary'
