--- a/ng-reactive-survey/src/app/survey/pages/home/home.page.html
+++ b/ng-reactive-survey/src/app/survey/pages/home/home.page.html
@@ -1,4 +1,5 @@
 <p>home works!</p>
-<button (click)='onCreateSurvey()'>
+<button mat-raised-button
+        color='primary' (click)='onCreateSurvey()'>
   Create survey!
 </button>
