my surveys page

--- a/ng-reactive-survey/src/app/survey/pages/home/home.page.html
+++ b/ng-reactive-survey/src/app/survey/pages/home/home.page.html
@@ -1,5 +1,9 @@
-<p>home works!</p>
-<button mat-raised-button
-        color='primary' (click)='onCreateSurvey()'>
-  Create survey!
-</button>
+<div class='d-flex justify-content-between my-2'>
+  <div></div>
+  <button mat-raised-button
+          color='primary' (click)='onCreateSurvey()'>
+    Create survey!
+  </button>
+</div>
+
+<app-my-surveys-list></app-my-surveys-list>
