--- a/ng-reactive-survey/src/app/survey/components/my-surveys-list/my-surveys-list.component.html
+++ b/ng-reactive-survey/src/app/survey/components/my-surveys-list/my-surveys-list.component.html
@@ -9,7 +9,9 @@
 
     <ng-container matColumnDef='title'>
       <th mat-header-cell *matHeaderCellDef> Title</th>
-      <td mat-cell *matCellDef='let element'> {{element.title}} </td>
+      <td mat-cell *matCellDef='let element'>
+        <a [routerLink]="getRouterLink(element.id)">{{element.title}}</a>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef='description'>
