update user info

--- a/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
+++ b/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
@@ -8,7 +8,7 @@
     <div class='navbar-nav'>
       <a class='nav-link' routerLink='/survey/my-surveys' routerLinkActive='active'>My surveys</a>
       <a class='nav-link' routerLink='./survey/taken-surveys' routerLinkActive='active'>Taken surveys</a>
-      <a class='nav-link' routerLink='/authenticate/my-profile'>My profile</a>
+      <a class='nav-link' routerLink='/user/my-profile' routerLinkActive='active'>My profile</a>
     </div>
   </div>
   <div *ngIf='user$ | async as user'>
