--- a/ng-reactive-survey/src/app/security/components/edit-profile/edit-profile.component.html
+++ b/ng-reactive-survey/src/app/security/components/edit-profile/edit-profile.component.html
@@ -1,1 +1,36 @@
-<p>edit-profile works!</p>
+<form [formGroup]='form' (ngSubmit)='submit()' class='w-50 m-auto'>
+  <mat-form-field>
+    <label>Username:</label>
+    <input
+      formControlName='username'
+      matInput>
+  </mat-form-field>
+
+  <mat-form-field>
+    <label>Email:</label>
+    <input
+      formControlName='email'
+      matInput>
+  </mat-form-field>
+
+  <mat-form-field>
+    <label>First Name:</label>
+    <input
+      formControlName='firstName'
+      matInput>
+  </mat-form-field>
+
+  <mat-form-field>
+    <label>Last Name:</label>
+    <input
+      formControlName='lastName'
+      matInput>
+  </mat-form-field>
+
+  <button [disabled]='form.pristine'
+          type='submit'
+          mat-stroked-button>
+    Update!
+  </button>
+
+</form>
