create and view survey invitations

--- a/ng-reactive-survey/src/styles.scss
+++ b/ng-reactive-survey/src/styles.scss
@@ -25,3 +25,8 @@ a {
     cursor: pointer;
   }
 }
+
+button:focus, button:active:focus, button.active:focus {
+  outline: none !important;
+  outline-style: none !important;
+}
