pending surveys page

--- a/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
+++ b/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
@@ -7,6 +7,7 @@
   <div *ngIf='user$ | async' class='collapse navbar-collapse' id='navbarNavAltMarkup'>
     <div class='navbar-nav'>
       <a class='nav-link' routerLink='/survey/my-surveys' routerLinkActive='active'>My surveys</a>
+      <a class='nav-link' routerLink='./survey/pending-surveys' routerLinkActive='active'>Pending surveys</a>
       <a class='nav-link' routerLink='./survey/taken-surveys' routerLinkActive='active'>Taken surveys</a>
       <a class='nav-link' routerLink='/user/my-profile' routerLinkActive='active'>My profile</a>
     </div>
