--- a/ng-reactive-survey/src/app/survey/components/my-surveys-list/my-surveys-list.component.html
+++ b/ng-reactive-survey/src/app/survey/components/my-surveys-list/my-surveys-list.component.html
@@ -1,29 +1,33 @@
-<div class='mat-elevation-z8'>
+<h2 *ngIf='dataSource.count() === 0 && (dataSource.loading$ | async) === false; else items'>No surveys created!</h2>
 
-  <table mat-table [dataSource]='dataSource'>
+<ng-template #items>
+  <div class='mat-elevation-z8'>
 
-    <ng-container matColumnDef='rowNumber'>
-      <th mat-header-cell *matHeaderCellDef> #</th>
-      <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
-    </ng-container>
+    <table mat-table [dataSource]='dataSource'>
 
-    <ng-container matColumnDef='title'>
-      <th mat-header-cell *matHeaderCellDef> Title</th>
-      <td mat-cell *matCellDef='let element'>
-        <a [routerLink]="getRouterLink(element.id)">{{element.title}}</a>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef='rowNumber'>
+        <th mat-header-cell *matHeaderCellDef> #</th>
+        <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef='description'>
-      <th mat-header-cell *matHeaderCellDef> Description</th>
-      <td mat-cell *matCellDef='let element'> {{element.description}} </td>
-    </ng-container>
+      <ng-container matColumnDef='title'>
+        <th mat-header-cell *matHeaderCellDef> Title</th>
+        <td mat-cell *matCellDef='let element'>
+          <a [routerLink]='getRouterLink(element.id)'>{{element.title}}</a>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-    <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
-  </table>
+      <ng-container matColumnDef='description'>
+        <th mat-header-cell *matHeaderCellDef> Description</th>
+        <td mat-cell *matCellDef='let element'> {{element.description}} </td>
+      </ng-container>
 
-  <mat-paginator [length]='length$ | async'
-                 [pageSize]='5'
-                 [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
-</div>
+      <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+      <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+    </table>
+
+    <mat-paginator [length]='length$ | async'
+                   [pageSize]='5'
+                   [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
+  </div>
+</ng-template>
