--- a/ng-reactive-survey/src/app/survey/pages/taken-surveys-list/taken-surveys-list.page.html
+++ b/ng-reactive-survey/src/app/survey/pages/taken-surveys-list/taken-surveys-list.page.html
@@ -1,29 +1,34 @@
-<div class='mat-elevation-z8'>
+<h2 *ngIf='dataSource.count() === 0 && (dataSource.loading$ | async) === false; else items'>No taken surveys!</h2>
 
-  <table mat-table [dataSource]='dataSource'>
+<ng-template #items>
+  <div class='mat-elevation-z8'>
 
-    <ng-container matColumnDef='rowNumber'>
-      <th mat-header-cell *matHeaderCellDef>#</th>
-      <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
-    </ng-container>
+    <table mat-table [dataSource]='dataSource'>
 
-    <ng-container matColumnDef='surveyTitle'>
-      <th mat-header-cell *matHeaderCellDef>Title</th>
-      <td mat-cell *matCellDef='let element'>
-        <a [routerLink]='getRouterLink(element.id)'>{{element.surveyTitle}}</a>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef='rowNumber'>
+        <th mat-header-cell *matHeaderCellDef>#</th>
+        <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef='dateTaken'>
-      <th mat-header-cell *matHeaderCellDef>Date taken</th>
-      <td mat-cell *matCellDef='let element'> {{element.dateTaken | date: 'yyyy-MM-dd'}} </td>
-    </ng-container>
+      <ng-container matColumnDef='surveyTitle'>
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef='let element'>
+          <a [routerLink]='getRouterLink(element.id)'>{{element.surveyTitle}}</a>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-    <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
-  </table>
+      <ng-container matColumnDef='dateTaken'>
+        <th mat-header-cell *matHeaderCellDef>Date taken</th>
+        <td mat-cell *matCellDef='let element'> {{element.dateTaken | date: 'yyyy-MM-dd'}} </td>
+      </ng-container>
 
-  <mat-paginator [length]='length$ | async'
-                 [pageSize]='5'
-                 [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
-</div>
+      <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+      <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+    </table>
+
+    <mat-paginator [length]='length$ | async'
+                   [pageSize]='5'
+                   [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
+  </div>
+</ng-template>
+
