--- a/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
+++ b/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
@@ -93,6 +93,7 @@
   <button mat-raised-button
           color='primary'
           class='mt-2'
+          [disabled]='form.invalid'
           (click)='submit()'>
     Submit !
   </button>
